# diffpipe

./: README.md  main.py  pyproject.toml
.github/workflows/: linting.yaml  mockgen_opencosmo_main.yaml
diffpipe/: data.py  files.py  header.py
diffpipe/index/: index.py
src/diffpipe/: __init__.py  cli.py  data.py  files.py  header.py  updaters.py
src/diffpipe/headers/: LastJourney.hdf5
src/diffpipe/index/: __init__.py  index.py
