[project]
name = "diffpipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.1.0",
    "astropy-healpix>=1.1.2",
    "click>=8.3.1",
    "h5py>=3.14.0",
    "healpix>=2024.2",
    "healpy>=1.18.1",
    "numba>=0.62.1",
    "numpy>=2.3.1",
    "opencosmo>=0.9.6",
    "tqdm>=4.67.1",
]

[project.scripts]
diffpipe = "diffpipe.cli:diffpipe"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
